{
    "name": "PlayerMove",
    "maps": [
        {
            "name": "Player",
            "id": "de07c0f9-733e-483c-88e0-88ca7f9c5da3",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "cb260118-7c2c-4861-8f5f-28b8be8d0199",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2),Tap",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "d9d27ed0-a1f0-4c0f-b608-97309bd6e071",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "5f21d54b-bd15-4b89-8275-520dcc9e0e31",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5b6afde9-09ff-48fb-9850-8c1645f7c763",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e1dce4f6-2771-47f9-95cc-fa4f7ec70efc",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis 2",
                    "id": "489bbb8e-ef29-4a01-8cdd-6c45743fbcda",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "2ad50388-6a2c-4150-a048-f24f87696a50",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "cedb8ebd-17af-4983-a0bd-ee2de4002bdc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "005ecfae-8c8d-463e-8d4f-ed3132dc7794",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c4ea31c-eb84-4868-aed0-b3c82a326f2d",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}